# pet-vae

./: .gitignore  README.md  data_cleaning.py  dataloader.py  environment.yml  loss.py  main_inference.py  main_train.py  model.py  model_viz.py  performance_metrics.py  plotting.py  pyproject.toml  requirements.txt  save_load.py  train.py
.github/workflows/: pylint.yml
configs/: test_config.yml  train_config.yml
scripts/: data_cleaning.py  main_inference.py  main_train.py  make_gif.py
